created angular view template for gringotts site

--- a/stylesheet/stylesheet.less
+++ b/stylesheet/stylesheet.less
@@ -57,7 +57,7 @@ header
     #quicklinks
     {
         width: 100%;
-        background: url('down_arrow.png') no-repeat top 14px right 10px green;
+        background: url('down_arrow.png') no-repeat top 14px right 10px black;
           background-size: 23px;
 		.box-sizing();
         float: left;
@@ -73,7 +73,11 @@ header
             display: block;
             .box-sizing();
         }
-        
+        div#test
+		{
+			position: relative;
+		}
+
         ul
         {
             padding: 0;
